mise à jour du portefolio

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <body>
         <header>
             <img class="logo" src="./logo sample 4.png"  height="170px" width="300px">
-            <div class="contentmenu"><li class="menutext"><a href="https://deverror6068.github.io#parcours" id="link">Mon parcours</a></li><li class="menutext" ><a id="link" href="mailto:alexandre.pham@ynov.com">Me contacter</a></li><li class="menutext"><a id ="link">À  propos</a></li></div>
+            <div class="contentmenu"><li class="menutext"><a href="https://deverror6068.github.io#parcours" id="link">Mon parcours</a></li><li class="menutext" ><a id="link" href="mailto:alexandre.pham@ynov.com">Me contacter</a></li><li class="menutext"><a id ="link">À  propos</a></li><li class="menutext"><a id="link" href="./stage2024.html"> Stage 2024</a> </li></div>
         </header>
         <div class="main">
             <div class="pre-content">
-                <div id="first-quote"> <h1  class="intro" >3 ans d'experience  dans  la programmation</h1></div>
-                <div id="second-quote"><img  id="java" src="./IMG/java.png" height="40px" weight="40px"><h1 id="Titlesubject"  class="java" > Java </h1><p  name="2" id="skilltext"> 1 an  de  développement (POO) </p></div>
-                <div id="third-quote"  ><img  id="golang" src="./IMG/golang.png" height="60px" weight="60px"><h1 id="Titlesubject" class="golang"> Golang </h1><p  name="3" id="skilltext"> 1 an de golang (back + POO)</p></div>
-                <div id="fourth-quote" ><img  id="python" src="./IMG/python.png" height="40px" weight="40px"><h1 id="Titlesubject" class="python"> Python</h1><p  name="4" id="skilltext"> 3 ans de developpemment (POO,PILE,FILE)</p></div>
-                <div id="fifth-quote"><img  id="frontend" src="./IMG/frontend.png" height="40px" weight="40px"><h1 id="Titlesubject" class="front"> Front</h1><p  name="5" id="skilltext"> 3 ans d'experience (HTML,JavaScript)</p></div>
-                <div id="sixth-quote"><img  id="backend" src="./IMG/backend.png" height="60px" weight="60px"><h1 id="Titlesubject" class="back"> Backend</h1><p name="6" id="skilltext"> 1 an d'experience (Node JS, Golang)</p></div>
+                <div id="first-quote" class="language"> <h1  class="intro" >3 ans d'experience  dans  la programmation</h1></div>
+                <div id="second-quote" class="language"><img  id="java" src="./IMG/java.png" height="40px" weight="40px"><h1 id="Titlesubject"  class="java" > Java </h1><p  name="2" id="skilltext"> 1 an  de  développement (POO) </p></div>
+                <div id="third-quote" class="language"  ><img  id="golang" src="./IMG/golang.png" height="60px" weight="60px"><h1 id="Titlesubject" class="golang"> Golang </h1><p  name="3" id="skilltext"> 1 an de golang (back + POO)</p></div>
+                <div id="fourth-quote" class="language" ><img  id="python" src="./IMG/python.png" height="40px" weight="40px"><h1 id="Titlesubject" class="python"> Python</h1><p  name="4" id="skilltext"> 3 ans de developpemment (POO,PILE,FILE)</p></div>
+                <div id="fifth-quote" class="language"><img  id="frontend" src="./IMG/frontend.png" height="40px" weight="40px"><h1 id="Titlesubject" class="front"> Front</h1><p  name="5" id="skilltext"> 3 ans d'experience (HTML,JavaScript)</p></div>
+                <div id="sixth-quote" class="language"><img  id="backend" src="./IMG/backend.png" height="60px" weight="60px"><h1 id="Titlesubject" class="back"> Backend</h1><p name="6" id="skilltext"> 1 an d'experience (Node JS, Golang)</p></div>
             </div>
             <div class="content" id="parcours">
                 <p id="CV">Mon Parcours</p><img id="imgpresentation" src="./IMG/Alexandre-PHAM.jpg" alt="Moi">
